[package]
name = "iron-sessionstorage-0-6"
version = "0.6.6"

authors = ["Markus Unterwaditzer <markus@unterwaditzer.net>"]
license = "MIT"
keywords = ["iron", "sessions", "cookie", "user", "login"]
readme = "README.md"

description = "Session middleware for Iron."
repository = "https://github.com/iron/iron-sessionstorage"
homepage = "https://github.com/iron/iron-sessionstorage"

[dependencies]
iron = "0.6"
cookie = { version = "0.5", features = ["secure"] }
error-chain = "0.11"
rand = "0.4"

redis = { version = "0.8", optional = true }
r2d2_redis = { version = "0.7", optional = true }
r2d2 = { version = "0.8", optional = true }

[features]
redis-backend = ["redis", "r2d2_redis", "r2d2"]

[dev-dependencies]
router = "0.6"
urlencoded = "0.6"
